update tomcat info